--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "> 0.25% or not dead"
   ],
   "jest": {
-    "collectCoverage": true,
+    "collectCoverage": false,
     "testEnvironment": "node"
   },
   "keywords": [
@@ -62,7 +62,7 @@
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-vue": "^8.7.1",
-    "jest": "^27.5.1",
+    "jest": "^29.3.1",
     "leaflet": "^1.9.2",
     "load-json-file": "^6.2.0",
     "martinez-polygon-clipping": "^0.7.1",
